Update root README.md to document Config Server, Resilience4j, and validation features